--- a/templates/cluster.yml
+++ b/templates/cluster.yml
@@ -174,6 +174,7 @@ spec:
 ---
 {{end -}}
 {{$csSpec := .CS -}}
+{{$ssSpec := .SS -}}
 {{$bootSpec := .Boot -}}
 {{range $rack := .Racks -}}
 kind: Node
@@ -226,6 +227,33 @@ spec:
   resources:
     cpu: {{$csSpec.CPU}}
     memory: {{$csSpec.Memory}}
+---
+{{end -}}
+{{range $ssNode := $rack.SSs -}}
+kind: Node
+name: {{$rack.Name}}-{{$ssNode.Name}}
+spec:
+  interfaces:
+    - {{$rack.Name}}-node1
+    - {{$rack.Name}}-node2
+  volumes:
+    - kind: image
+      name: root
+      spec:
+        image: coreos-image
+        copy-on-write: true
+    - kind: vvfat
+      name: common
+      spec:
+        folder: common-data
+    - kind: vvfat
+      name: local
+      spec:
+        folder: {{$rack.Name}}-bird-data
+  ignition: {{$rack.Name}}-{{$ssNode.Name}}.ign
+  resources:
+    cpu: {{$ssSpec.CPU}}
+    memory: {{$ssSpec.Memory}}
 ---
 {{end -}}
 {{end -}}
