Separate special address from addresses.

--- a/templates/bird_spine.conf
+++ b/templates/bird_spine.conf
@@ -32,10 +32,10 @@ template bgp bgptor {
 }
 {{range $rack := .Args.Racks -}}
 protocol bgp '{{$rack.Name}}-tor1' from bgptor {
-    neighbor {{(index $rack.ToR1Addresses $spineIdx).IP}} as {{$rack.ASN}};
+    neighbor {{(index $rack.ToR1SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
 }
 protocol bgp '{{$rack.Name}}-tor2' from bgptor {
-    neighbor {{(index $rack.ToR2Addresses $spineIdx).IP}} as {{$rack.ASN}};
+    neighbor {{(index $rack.ToR2SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
 }
 {{end -}}
 ipv4 table outertab;
@@ -44,11 +44,11 @@ protocol static myroutes {
         table outertab;
     };
     # LoadBalancer
-    route {{.Args.Network.Exposed.LoadBalancer}} via {{(index $self.Addresses 0).IP}}; # TODO: Addresses を index番号よりもわかりやすく参照可能にする
+    route {{.Args.Network.Exposed.LoadBalancer}} via {{$self.ExtnetAddress.IP}};
     # Bastion
-    route {{.Args.Network.Exposed.Bastion}} via {{(index $self.Addresses 0).IP}};
+    route {{.Args.Network.Exposed.Bastion}} via {{$self.ExtnetAddress.IP}};
     # Ingress
-    route {{.Args.Network.Exposed.Ingress}} via {{(index $self.Addresses 0).IP}};
+    route {{.Args.Network.Exposed.Ingress}} via {{$self.ExtnetAddress.IP}};
 }
 protocol bgp bgpextvm {
     local as {{.Args.Network.ASNSpine}};
