--- a/templates/bird_vm.conf
+++ b/templates/bird_vm.conf
@@ -38,7 +38,7 @@ template bgp bgpspine {
 {{$asnSpine := .Network.ASNSpine -}}
 {{range $spine := .Spines -}}
 protocol bgp '{{$spine.Name}}' from bgpspine {
-    neighbor {{(index $spine.Addresses 0).IP}} as {{$asnSpine}};
+    neighbor {{$spine.ExtnetAddress.IP}} as {{$asnSpine}};
 }
 {{end -}}
 protocol pipe outerroutes {
