Simplify method invocation from templates.

--- a/templates/bird_rack-tor1.conf
+++ b/templates/bird_rack-tor1.conf
@@ -27,7 +27,7 @@ protocol kernel {
 {{range $spine := .Args.Spines -}}
 protocol bgp '{{$spine.Name}}' {
     local as {{$self.ASN}};
-    neighbor {{(call $spine.ToR1Address $rackIdx).IP}} as {{$asnSpine}};
+    neighbor {{($spine.ToR1Address $rackIdx).IP}} as {{$asnSpine}};
     bfd;
 
     ipv4 {
