--- a/templates/bird_rack-tor2.conf
+++ b/templates/bird_rack-tor2.conf
@@ -27,7 +27,7 @@ protocol kernel {
 {{range $spine := .Args.Spines -}}
 protocol bgp '{{$spine.Name}}' {
     local as {{$self.ASN}};
-    neighbor {{(call $spine.ToR2Address $rackIdx).IP}} as {{$asnSpine}};
+    neighbor {{($spine.ToR2Address $rackIdx).IP}} as {{$asnSpine}};
     bfd;
 
     ipv4 {
