--- a/example.yml
+++ b/example.yml
@@ -27,8 +27,8 @@ spec:
 kind: Node
 type: cs
 spec:
-  cpu: 4
-  memory: 4G
+  cpu: 2
+  memory: 2G
 ---
 kind: Node
 type: ss
@@ -39,4 +39,4 @@ spec:
 kind: Account
 spec:
   username: cybozu
-  password: cybozu
+  password: $6$rounds=4096$m3AVOWeB$EPystoHozf.eJNCm4tWyRHpJzgTDymYuGOONWxRN8uk4amLvxwB4Pc7.tEkZdeXewoVEBEX5ujUon9wSpEf1N.
