--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: go get -u github.com/coreos/ignition/validate
-      - run: go get -u github.com/google/go-jsonnet
+      - run: go get -u github.com/google/go-jsonnet/jsonnet
       - run: go get github.com/golang/lint/golint
       - run: go get golang.org/x/tools/cmd/goimports
       - run: (! $GOPATH/bin/goimports -d . 2>&1 | read _)
