--- a/cmd/placemat-menu/public/templates/cluster.yml
+++ b/cmd/placemat-menu/public/templates/cluster.yml
@@ -144,6 +144,8 @@ spec:
 kind: Pod
 name: {{$rack.Name}}-tor1
 spec:
+  init-scripts:
+    - setup-rp-filter-0
   interfaces:
     {{range $spineIdx, $spine := $spines -}}
     - network: {{$spine.ShortName}}-to-{{$rack.ShortName}}-1
@@ -180,6 +182,8 @@ spec:
 kind: Pod
 name: {{$rack.Name}}-tor2
 spec:
+  init-scripts:
+    - setup-rp-filter-0
   interfaces:
     {{range $spineIdx, $spine := $spines -}}
     - network: {{$spine.ShortName}}-to-{{$rack.ShortName}}-2
