Add setup-rp-filter-0 to spine

--- a/cmd/placemat-menu/public/templates/cluster.yml
+++ b/cmd/placemat-menu/public/templates/cluster.yml
@@ -102,6 +102,7 @@ name: {{$spine.Name}}
 spec:
   init-scripts:
     - setup-iptables
+    - setup-rp-filter-0
   interfaces:
     - network: ext-net
       addresses:
