--- a/cmd/placemat-menu/public/templates/cluster.yml
+++ b/cmd/placemat-menu/public/templates/cluster.yml
@@ -141,6 +141,7 @@ spec:
 ---
 {{end -}}
 {{$spines := .Spines -}}
+{{$racks := .Racks -}}
 {{range $rack := .Racks -}}
 kind: Pod
 name: {{$rack.Name}}-tor1
@@ -179,6 +180,19 @@ spec:
     - name: debug
       image: docker://quay.io/cybozu/ubuntu-debug:18.04
       readonly-rootfs: true
+    - name: dhcp-relay
+      image: docker://quay.io/cybozu/dnsmasq:2.79
+      readonly-rootfs: true
+      caps-retain:
+        - CAP_NET_BIND_SERVICE
+        - CAP_NET_RAW
+        - CAP_NET_BROADCAST
+      args:
+        - "--no-daemon"
+        {{- range $rack2 := $racks}}
+        - "--dhcp-relay"
+        - "{{$rack.ToR1NodeAddress.IP}},{{(index $rack2.BootAddresses 0).IP}}"
+        {{- end }}
 ---
 kind: Pod
 name: {{$rack.Name}}-tor2
@@ -217,6 +231,19 @@ spec:
     - name: debug
       image: docker://quay.io/cybozu/ubuntu-debug:18.04
       readonly-rootfs: true
+    - name: dhcp-relay
+      image: docker://quay.io/cybozu/dnsmasq:2.79
+      readonly-rootfs: true
+      caps-retain:
+        - CAP_NET_BIND_SERVICE
+        - CAP_NET_RAW
+        - CAP_NET_BROADCAST
+      args:
+        - "--no-daemon"
+        {{- range $rack2 := $racks}}
+        - "--dhcp-relay"
+        - "{{$rack.ToR2NodeAddress.IP}},{{(index $rack2.BootAddresses 0).IP}}"
+        {{- end }}
 ---
 {{end -}}
 {{$csSpec := .CS -}}
