--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -294,6 +294,8 @@ spec:
         - CAP_NET_RAW
         - CAP_NET_BROADCAST
       args:
+        - "--log-queries"
+        - "--log-dhcp"
         - "--no-daemon"
         - "--dhcp-relay"
         - "10.69.0.65,10.69.0.3"
@@ -346,6 +348,8 @@ spec:
         - CAP_NET_RAW
         - CAP_NET_BROADCAST
       args:
+        - "--log-queries"
+        - "--log-dhcp"
         - "--no-daemon"
         - "--dhcp-relay"
         - "10.69.0.129,10.69.0.3"
@@ -398,6 +402,8 @@ spec:
         - CAP_NET_RAW
         - CAP_NET_BROADCAST
       args:
+        - "--log-queries"
+        - "--log-dhcp"
         - "--no-daemon"
         - "--dhcp-relay"
         - "10.69.1.1,10.69.0.3"
@@ -450,6 +456,8 @@ spec:
         - CAP_NET_RAW
         - CAP_NET_BROADCAST
       args:
+        - "--log-queries"
+        - "--log-dhcp"
         - "--no-daemon"
         - "--dhcp-relay"
         - "10.69.1.65,10.69.0.3"
