Refactor Address fields

--- a/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
@@ -56,11 +56,11 @@ protocol bgp '{{$self.Name}}-boot' from bgpnode {
 }
 {{range $cs := $self.CSList -}}
 protocol bgp '{{$self.Name}}-{{$cs.Name}}' from bgpnode {
-    neighbor {{(index $cs.Addresses 1).IP}} as {{$self.ASN}};
+    neighbor {{$cs.Node1Address.IP}} as {{$self.ASN}};
 }
 {{end -}}
 {{range $ss := $self.SSList -}}
 protocol bgp '{{$self.Name}}-{{$ss.Name}}' from bgpnode {
-    neighbor {{(index $ss.Addresses 1).IP}} as {{$self.ASN}};
+    neighbor {{$ss.Node1Address.IP}} as {{$self.ASN}};
 }
 {{end -}}
