--- a/cmd/placemat-menu/public/templates/cluster.yml
+++ b/cmd/placemat-menu/public/templates/cluster.yml
@@ -195,7 +195,7 @@ spec:
         - "--no-daemon"
         {{- range $rack2 := $racks}}
         - "--dhcp-relay"
-        - "{{$rack.ToR1NodeAddress.IP}},{{(index $rack2.BootAddresses 0).IP}}"
+        - "{{$rack.ToR1NodeAddress.IP}},{{$rack2.BootNode.Node0Address.IP}}"
         {{- end }}
 ---
 kind: Pod
@@ -248,7 +248,7 @@ spec:
         - "--no-daemon"
         {{- range $rack2 := $racks}}
         - "--dhcp-relay"
-        - "{{$rack.ToR2NodeAddress.IP}},{{(index $rack2.BootAddresses 0).IP}}"
+        - "{{$rack.ToR2NodeAddress.IP}},{{$rack2.BootNode.Node0Address.IP}}"
         {{- end }}
 ---
 {{end -}}
