--- a/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
@@ -52,7 +52,7 @@ template bgp bgpnode {
     };
 }
 protocol bgp '{{$self.Name}}-boot' from bgpnode {
-    neighbor {{(index $self.BootAddresses 1).IP}} as {{$self.ASN}};
+    neighbor {{$self.BootNode.Node1Address.IP}} as {{$self.ASN}};
 }
 {{range $cs := $self.CSList -}}
 protocol bgp '{{$self.Name}}-{{$cs.Name}}' from bgpnode {
