Create ToR struct to oragnize ToR template args

--- a/cmd/placemat-menu/public/templates/bird_rack-node.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-node.conf
@@ -56,8 +56,8 @@ template bgp tor {
     };
 }
 protocol bgp tor1 from tor {
-    neighbor {{$self.ToR1NodeAddress.IP}} as {{$self.ASN}};
+    neighbor {{$self.ToR1.NodeAddress.IP}} as {{$self.ASN}};
 }
 protocol bgp tor2 from tor {
-    neighbor {{$self.ToR2NodeAddress.IP}} as {{$self.ASN}};
+    neighbor {{$self.ToR2.NodeAddress.IP}} as {{$self.ASN}};
 }
