--- a/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-tor1.conf
@@ -6,7 +6,7 @@ protocol device {
 }
 protocol direct direct1 {
     ipv4;
-    interface "{{$self.ToR1NodeInterface}}";
+    interface "{{$self.ToR1.NodeInterface}}";
 }
 protocol bfd {
     interface "*" {
