--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -32,10 +32,10 @@ template bgp bgptor {
 }
 {{range $rack := .Args.Racks -}}
 protocol bgp '{{$rack.Name}}-tor1' from bgptor {
-    neighbor {{(index $rack.ToR1SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
+    neighbor {{(index $rack.ToR1.SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
 }
 protocol bgp '{{$rack.Name}}-tor2' from bgptor {
-    neighbor {{(index $rack.ToR2SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
+    neighbor {{(index $rack.ToR2.SpineAddresses $spineIdx).IP}} as {{$rack.ASN}};
 }
 {{end -}}
 ipv4 table outertab;
