--- a/cmd/placemat-menu/public/templates/bird_rack-tor2.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-tor2.conf
@@ -6,7 +6,7 @@ protocol device {
 }
 protocol direct direct1 {
     ipv4;
-    interface "{{$self.ToR2NodeInterface}}";
+    interface "{{$self.ToR2.NodeInterface}}";
 }
 protocol bfd {
     interface "*" {
