--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -84,6 +84,11 @@ spec:
   url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_qemu_image.img.bz2
   compression: bzip2
 ---
+kind: Image
+name: ubuntu-image
+spec:
+  url: https://cloud-images.ubuntu.com/releases/bionic/release/ubuntu-18.04-server-cloudimg-amd64.img
+---
 kind: DataFolder
 name: common-data
 spec:
@@ -176,7 +181,7 @@ spec:
   - kind: image
     name: root
     spec:
-      image: coreos-image
+      image: ubuntu-image
       copy-on-write: true
   - kind: vvfat
     name: common
@@ -188,7 +193,12 @@ spec:
     spec:
       folder: rack0-bird-data
       copy-on-write: false
-  ignition: rack0-boot.ign
+  - kind: localds
+    name: seed
+    spec:
+      user-data: rack0-boot-seed.yml
+      network-config: rack0-boot-network.yml
+      copy-on-write: false
   resources:
     cpu: "2"
     memory: 2G
@@ -257,7 +267,7 @@ spec:
   - kind: image
     name: root
     spec:
-      image: coreos-image
+      image: ubuntu-image
       copy-on-write: true
   - kind: vvfat
     name: common
@@ -269,7 +279,12 @@ spec:
     spec:
       folder: rack1-bird-data
       copy-on-write: false
-  ignition: rack1-boot.ign
+  - kind: localds
+    name: seed
+    spec:
+      user-data: rack1-boot-seed.yml
+      network-config: rack1-boot-network.yml
+      copy-on-write: false
   resources:
     cpu: "2"
     memory: 2G
