--- a/testdata/seed_rack1-boot.yml
+++ b/testdata/seed_rack1-boot.yml
@@ -1,3 +1,4 @@
+#cloud-config
 hostname: rack1-boot
 users:
 - name: cybozu
@@ -56,3 +57,7 @@ write_files:
 
     [Network]
     Address=10.72.48.1/32
+runcmd:
+- - systemctl
+  - restart
+  - systemd-networkd.service
