setup rkt on boot server

--- a/cmd/placemat-menu/public/static/Makefile
+++ b/cmd/placemat-menu/public/static/Makefile
@@ -1,4 +1,5 @@
 images = cybozu-bird-2.0.aci cybozu-ubuntu-debug-18.04.aci cybozu-dnsmasq-2.79.aci
+packages = rkt_1.30.0-1_amd64.deb
 
 default: start
 
@@ -11,7 +12,10 @@ cybozu-ubuntu-debug-18.04.aci:
 cybozu-dnsmasq-2.79.aci:
 	docker2aci docker://quay.io/cybozu/dnsmasq:2.79
 
-start: $(images)
+rkt_1.30.0-1_amd64.deb:
+	curl -SL -o rkt_1.30.0-1_amd64.deb "https://github.com/rkt/rkt/releases/download/v1.30.0/rkt_1.30.0-1_amd64.deb"
+
+start: $(images) $(packages)
 	@echo "Please run: $(GOPATH)/bin/placemat cluster.yml"
 
 clean:
