--- a/testdata/seed_rack1-boot.yml
+++ b/testdata/seed_rack1-boot.yml
@@ -7,7 +7,27 @@ users:
   lock_passwd: false
   passwd: $6$rounds=4096$m3AVOWeB$EPystoHozf.eJNCm4tWyRHpJzgTDymYuGOONWxRN8uk4amLvxwB4Pc7.tEkZdeXewoVEBEX5ujUon9wSpEf1N.
   shell: /bin/bash
-fs_setup: []
+disk_setup:
+  /dev/vde:
+    table_type: gpt
+    layout: true
+fs_setup:
+- label: rkt
+  filesystem: btrfs
+  device: /dev/vde1
+mounts:
+- - /dev/vdb1
+  - /mnt/containers
+  - auto
+  - defaults,ro
+- - /dev/vdc1
+  - /mnt/bird
+  - vfat
+  - defaults,ro
+- - /dev/vde1
+  - /var/lib/rkt
+  - btrfs
+  - defaults
 write_files:
 - path: /etc/systemd/network/10-node0.netdev
   content: |
@@ -24,7 +44,7 @@ write_files:
 - path: /etc/systemd/network/10-eth0.network
   content: |
     [Match]
-    Name=eth0
+    Name=ens3
 
     [Network]
     LLDP=true
@@ -36,7 +56,7 @@ write_files:
 - path: /etc/systemd/network/10-eth1.network
   content: |
     [Match]
-    Name=eth1
+    Name=ens4
 
     [Network]
     LLDP=true
@@ -57,7 +77,62 @@ write_files:
 
     [Network]
     Address=10.72.48.1/32
+- path: /etc/systemd/system/copy-bird-conf.service
+  content: |
+    [Unit]
+    After=mnt-bird.mount
+    ConditionPathExists=!/etc/bird
+
+    [Service]
+    Type=oneshot
+    ExecStart=/bin/cp -r /mnt/bird /etc/bird
+    RemainAfterExit=yes
+- path: /etc/systemd/system/rkt-fetch.service
+  content: |
+    [Service]
+    Type=oneshot
+    RemainAfterExit=yes
+    ExecStart=/bin/sh /mnt/containers/rkt-fetch
+- path: /etc/systemd/system/bird.service
+  content: |
+    [Unit]
+    Description=bird
+    After=copy-bird-conf.service
+    Wants=copy-bird-conf.service
+    After=rkt-fetch.service
+    Requires=rkt-fetch.service
+
+    [Service]
+    Slice=machine.slice
+    ExecStart=/usr/bin/rkt run \
+      --volume run,kind=empty,readOnly=false \
+      --volume etc,kind=host,source=/etc/bird,readOnly=true \
+      --net=host \
+      quay.io/cybozu/bird:2.0 \
+        --readonly-rootfs=true \
+        --caps-retain=CAP_NET_ADMIN,CAP_NET_BIND_SERVICE,CAP_NET_RAW \
+        --name bird \
+        --mount volume=run,target=/run/bird \
+        --mount volume=etc,target=/etc/bird \
+      quay.io/cybozu/ubuntu-debug:18.04 \
+        --readonly-rootfs=true \
+        --name ubuntu-debug
+    KillMode=mixed
+    Restart=on-failure
+    RestartForceExitStatus=SIGPIPE
+
+    [Install]
+    WantedBy=multi-user.target
 runcmd:
 - - systemctl
   - restart
   - systemd-networkd.service
+- - dpkg
+  - -i
+  - /mnt/containers/rkt.deb
+- - systemctl
+  - enable
+  - bird.service
+- - systemctl
+  - start
+  - bird.service
