[WIP] modify bird.conf of core-router

--- a/cmd/placemat-menu/public/templates/bird_core-router.conf
+++ b/cmd/placemat-menu/public/templates/bird_core-router.conf
@@ -18,3 +18,19 @@ protocol kernel {
         export all;
     };
 }
+template bgp bgpcore {
+    local as 64597;
+    bfd;
+
+    ipv4 {
+        import all;
+        export all;
+        next hop self;
+    };
+}
+protocol bgp 'spine1' from bgpcore {
+    neighbor 10.0.2.3 as 64599;
+}
+protocol bgp 'spine2' from bgpcore {
+    neighbor 10.0.0.4 as 64599;
+}
