--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -71,3 +71,13 @@ protocol pipe outerroutes {
     };
     export none;
 }
+protocol bgp 'core' {
+    local as {{.Args.Network.ASNSpine}};
+    neighbor 10.0.2.0 as 64597;
+    bfd;
+
+    ipv4 {
+        import all;
+        export all;
+    };
+}
