Add parameters to construct core router

--- a/cmd/placemat-menu/public/templates/bird_core-router.conf
+++ b/cmd/placemat-menu/public/templates/bird_core-router.conf
@@ -10,7 +10,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via {{.Network.External.Host.IP}};
+    route 0.0.0.0/0 via {{.Network.ExternalNodes.Host.IP}};
 }
 protocol kernel {
     merge paths;
@@ -28,9 +28,11 @@ template bgp bgpcore {
         next hop self;
     };
 }
-protocol bgp 'spine1' from bgpcore {
-    neighbor 10.0.2.3 as 64599;
+{{$coreSpineAddresses := .CoreRouter.SpineAddresses -}}
+{{$asnSpine := .Network.ASNSpine -}}
+{{range $spineIdx, $spine :=  .Spines -}}
+protocol bgp '{{$spine.Name}}' from bgpcore {
+    neighbor {{(index $coreSpineAddresses $spineIdx).IP}} as {{$asnSpine}};
 }
-protocol bgp 'spine2' from bgpcore {
-    neighbor 10.0.0.4 as 64599;
-}
+{{end -}}
+
