--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -12,7 +12,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via {{.Args.Network.External.Host.IP}};
+    route 0.0.0.0/0 via 10.0.2.0;
 }
 protocol kernel {
     merge paths;
@@ -44,15 +44,15 @@ protocol static myroutes {
         table outertab;
     };
     # LoadBalancer
-    route {{.Args.Network.Exposed.LoadBalancer}} via {{$self.ExtnetAddress.IP}};
+    route {{.Args.Network.Exposed.LoadBalancer}} via {{$self.CoreRouterAddress.IP}};
     # Bastion
-    route {{.Args.Network.Exposed.Bastion}} via {{$self.ExtnetAddress.IP}};
+    route {{.Args.Network.Exposed.Bastion}} via {{$self.CoreRouterAddress.IP}};
     # Ingress
-    route {{.Args.Network.Exposed.Ingress}} via {{$self.ExtnetAddress.IP}};
+    route {{.Args.Network.Exposed.Ingress}} via {{$self.CoreRouterAddress.IP}};
 }
 protocol bgp bgpextvm {
     local as {{.Args.Network.ASNSpine}};
-    neighbor {{.Args.Network.External.VM.IP}} as {{.Args.Network.ASNExtVM}};
+    neighbor {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}} as {{.Args.Network.ASNCoreRouter}};
     bfd;
 
     ipv4 {
