[WIP] spines can access to internet, but nodes can't.

--- a/cmd/placemat-menu/public/templates/bird_core-router.conf
+++ b/cmd/placemat-menu/public/templates/bird_core-router.conf
@@ -10,7 +10,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via {{.Network.ExternalNodes.Host.IP}};
+    route 0.0.0.0/0 via {{.Network.Endpoints.Host.IP}};
 }
 protocol kernel {
     merge paths;
@@ -19,7 +19,7 @@ protocol kernel {
     };
 }
 template bgp bgpcore {
-    local as 64597;
+    local as {{.Network.ASNCoreRouter}};
     bfd;
 
     ipv4 {
@@ -28,11 +28,10 @@ template bgp bgpcore {
         next hop self;
     };
 }
-{{$coreSpineAddresses := .CoreRouter.SpineAddresses -}}
 {{$asnSpine := .Network.ASNSpine -}}
 {{range $spineIdx, $spine :=  .Spines -}}
 protocol bgp '{{$spine.Name}}' from bgpcore {
-    neighbor {{(index $coreSpineAddresses $spineIdx).IP}} as {{$asnSpine}};
+    neighbor {{$spine.CoreRouterAddress.IP}} as {{$asnSpine}};
 }
 {{end -}}
 
