--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -12,7 +12,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via 10.0.2.0;
+    route 0.0.0.0/0 via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
 }
 protocol kernel {
     merge paths;
@@ -44,13 +44,14 @@ protocol static myroutes {
         table outertab;
     };
     # LoadBalancer
-    route {{.Args.Network.Exposed.LoadBalancer}} via {{$self.CoreRouterAddress.IP}};
+    route {{.Args.Network.Exposed.LoadBalancer}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
     # Bastion
-    route {{.Args.Network.Exposed.Bastion}} via {{$self.CoreRouterAddress.IP}};
+    route {{.Args.Network.Exposed.Bastion}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
     # Ingress
-    route {{.Args.Network.Exposed.Ingress}} via {{$self.CoreRouterAddress.IP}};
+    route {{.Args.Network.Exposed.Ingress}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
 }
-protocol bgp bgpextvm {
+
+protocol bgp 'core' {
     local as {{.Args.Network.ASNSpine}};
     neighbor {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}} as {{.Args.Network.ASNCoreRouter}};
     bfd;
@@ -62,6 +63,7 @@ protocol bgp bgpextvm {
         next hop self;
     };
 }
+
 protocol pipe outerroutes {
     table master4;
     peer table outertab;
@@ -70,14 +72,4 @@ protocol pipe outerroutes {
         accept;
     };
     export none;
-}
-protocol bgp 'core' {
-    local as {{.Args.Network.ASNSpine}};
-    neighbor 10.0.2.0 as 64597;
-    bfd;
-
-    ipv4 {
-        import all;
-        export all;
-    };
 }
