--- a/cmd/placemat-menu/public/templates/bird_vm.conf
+++ b/cmd/placemat-menu/public/templates/bird_vm.conf
@@ -13,7 +13,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via {{.Network.ExternalNodes.Host.IP}};
+    route 0.0.0.0/0 via {{.Network.Endpoints.Host.IP}};
 }
 protocol kernel {
     merge paths;
