--- a/testdata/bird_spine1.conf
+++ b/testdata/bird_spine1.conf
@@ -10,7 +10,7 @@ protocol bfd {
 }
 protocol static defaultgw {
     ipv4;
-    route 0.0.0.0/0 via 10.0.0.1;
+    route 0.0.0.0/0 via 10.0.2.1;
 }
 protocol kernel {
     merge paths;
@@ -46,15 +46,16 @@ protocol static myroutes {
         table outertab;
     };
     # LoadBalancer
-    route 10.72.32.0/20 via 10.0.0.3;
+    route 10.72.32.0/20 via 10.0.2.1;
     # Bastion
-    route 10.72.48.0/26 via 10.0.0.3;
+    route 10.72.48.0/26 via 10.0.2.1;
     # Ingress
-    route 10.72.48.64/26 via 10.0.0.3;
+    route 10.72.48.64/26 via 10.0.2.1;
 }
-protocol bgp bgpextvm {
+
+protocol bgp 'core' {
     local as 64599;
-    neighbor 10.0.0.2 as 64598;
+    neighbor 10.0.2.1 as 64597;
     bfd;
 
     ipv4 {
@@ -64,6 +65,7 @@ protocol bgp bgpextvm {
         next hop self;
     };
 }
+
 protocol pipe outerroutes {
     table master4;
     peer table outertab;
