--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -1,9 +1,34 @@
 kind: Network
-name: ext-net
+name: internet
 spec:
   internal: false
   use-nat: true
   addresses:
+  - 10.0.0.2/24
+---
+kind: Network
+name: core-to-s1
+spec:
+  internal: true
+  use-nat: false
+---
+kind: Network
+name: core-to-s2
+spec:
+  internal: true
+  use-nat: false
+---
+kind: Network
+name: core-extvm
+spec:
+  internal: true
+  use-nat: false
+---
+kind: Network
+name: core-to-bastion
+spec:
+  internal: true
+  use-nat: false
 ---
 kind: Network
 name: s1-to-r0-1
@@ -106,11 +131,16 @@ spec:
     file: rkt_1.30.0-1_amd64.deb
 ---
 kind: DataFolder
+name: core-router-data
+spec:
+  files:
+  - name: bird.conf
+    file: bird_core-router.conf
+---
+kind: DataFolder
 name: spine1-data
 spec:
   files:
-  - name: setup-iptables
-    file: setup-iptables
   - name: bird.conf
     file: bird_spine1.conf
 ---
@@ -118,8 +148,6 @@ kind: DataFolder
 name: spine2-data
 spec:
   files:
-  - name: setup-iptables
-    file: setup-iptables
   - name: bird.conf
     file: bird_spine2.conf
 ---
@@ -412,7 +440,7 @@ kind: Node
 name: ext-vm
 spec:
   interfaces:
-  - ext-net
+  - internet
   volumes:
   - kind: image
     name: root
@@ -435,14 +463,58 @@ spec:
     memory: 1G
 ---
 kind: Pod
-name: spine1
+name: core-router
 spec:
   init-scripts:
   - setup-iptables
   interfaces:
-  - network: ext-net
+  - network: internet
     addresses:
-    - 10.0.0.3/24
+    - 10.0.0.4/24
+  - network: core-to-s1
+    addresses:
+    - 10.0.2.0/24
+  - network: core-to-s2
+    addresses:
+    - 10.0.2.2/24
+  - network: core-to-extvm
+    addresses:
+    - 10.0.3.1/24
+  - network: core-to-bastion
+    addresses:
+    - 10.0.3.1/24
+  volumes:
+  - name: config
+    kind: host
+    folder: core-router-data
+    readonly: true
+  - name: run
+    kind: empty
+    readonly: false
+  apps:
+  - name: bird
+    image: docker://quay.io/cybozu/bird:2.0
+    readonly-rootfs: true
+    caps-retain:
+    - CAP_NET_ADMIN
+    - CAP_NET_BIND_SERVICE
+    - CAP_NET_RAW
+    mount:
+    - volume: config
+      target: /etc/bird
+    - volume: run
+      target: /run/bird
+  - name: debug
+    image: docker://quay.io/cybozu/ubuntu-debug:18.04
+    readonly-rootfs: true
+---
+kind: Pod
+name: spine1
+spec:
+  interfaces:
+  - network: core-to-s1
+    addresses:
+    - 10.0.2.1/24
   - network: s1-to-r0-1
     addresses:
     - 10.0.1.0/31
@@ -483,12 +555,10 @@ spec:
 kind: Pod
 name: spine2
 spec:
-  init-scripts:
-  - setup-iptables
   interfaces:
-  - network: ext-net
+  - network: core-to-s2
     addresses:
-    - 10.0.0.4/24
+    - 10.0.2.3/24
   - network: s2-to-r0-1
     addresses:
     - 10.0.1.8/31
