--- a/example.yml
+++ b/example.yml
@@ -4,7 +4,7 @@ spec:
   internet: 10.0.0.0/24
   spine-tor: 10.0.1.0
   core-spine: 10.0.2.0/31
-  core-extvm: 10.0.3.0/24
+  core-external: 10.0.3.0/24
   core-bastion: 10.0.4.0/24
   node: 10.69.0.0/26
   exposed:
