--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -25,7 +25,7 @@ spec:
   use-nat: false
 ---
 kind: Network
-name: core-to-bastion
+name: core-to-op
 spec:
   internal: true
   use-nat: false
@@ -480,7 +480,7 @@ spec:
   - network: core-to-ext
     addresses:
     - 10.0.3.1/24
-  - network: core-to-bastion
+  - network: core-to-op
     addresses:
     - 10.0.4.1/24
   volumes:
