--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -437,6 +437,27 @@ spec:
     memory: 1G
 ---
 kind: Node
+name: operation
+spec:
+  interfaces:
+  - core-to-op
+  volumes:
+  - kind: image
+    name: root
+    spec:
+      image: ubuntu-image
+      copy-on-write: true
+  - kind: localds
+    name: seed
+    spec:
+      user-data: seed_operation.yml
+      network-config: network.yml
+      copy-on-write: false
+  resources:
+    cpu: "2"
+    memory: 1G
+---
+kind: Node
 name: ext-vm
 spec:
   interfaces:
