Mount host's directory to operation node

--- a/cmd/placemat-menu/public/static/Makefile
+++ b/cmd/placemat-menu/public/static/Makefile
@@ -1,5 +1,6 @@
 images = cybozu-bird-2.0.aci cybozu-ubuntu-debug-18.04.aci cybozu-dnsmasq-2.79.aci
 packages = rkt_1.30.0-1_amd64.deb
+operation_dir = operation
 
 default: start
 
@@ -15,7 +16,10 @@ cybozu-dnsmasq-2.79.aci:
 rkt_1.30.0-1_amd64.deb:
 	curl -SL -o rkt_1.30.0-1_amd64.deb "https://github.com/rkt/rkt/releases/download/v1.30.0/rkt_1.30.0-1_amd64.deb"
 
-start: $(images) $(packages)
+$(operation_dir):
+	mkdir -p $(operation_dir)
+
+start: $(images) $(packages) $(operation_dir)
 	@echo "Please run: $(GOPATH)/bin/placemat cluster.yml"
 
 clean:
