Install docker2aci to operation server

--- a/testdata/seed_rack0-boot.yml
+++ b/testdata/seed_rack0-boot.yml
@@ -138,6 +138,8 @@ write_files:
 
     [Install]
     WantedBy=multi-user.target
+- path: /etc/ssh/sshd_config
+  content: ""
 runcmd:
 - - systemctl
   - restart
